--- a/amaan ullah/ishfaq/wajhat/index.html
+++ b/amaan ullah/ishfaq/wajhat/index.html
@@ -109,7 +109,7 @@
         <!-- First Generation -->
         <div class="generation">
             <div class="member">
-                <img src="images/waji.jpg" alt="Grandparent">
+                <img src="images/waji.JPG" alt="Grandparent">
                 <p>Wajahat Rasool</p>
             </div>
         </div>
