--- a/amaan ullah/ishfaq/ishfaq.html
+++ b/amaan ullah/ishfaq/ishfaq.html
@@ -121,7 +121,7 @@
 
         <div class="generation">
             <div class="member">
-                <a href="wajhat/index.html"><img src="images/waji.jpg" alt="Parent 1"></a>
+                <a href="wajhat/index.html"><img src="images/waji.JPG" alt="Parent 1"></a>
                 <p><a href="wajhat/index.html">Wajahat</a></p>
             </div>
 
