--- a/fazal/afzal/afzal.html
+++ b/fazal/afzal/afzal.html
@@ -119,7 +119,7 @@
             <div class="member">
                 <img src="images/afzal.jpg" alt="Grandparent" />
                 <p>Muhhamad Afzal</p>
-            </div>
+            </div>                                            
         </div>
         <!-- Second Generation -->
         <div class="connector">
@@ -133,7 +133,7 @@
             </div>
             <div class="member">
                 <a href="">
-                    <img src="images/ismail.jpg" alt="Parent 1" /></a>
+                    <img src="images/ismai.jpg" alt="Parent 1" /></a>
                 <p><a href="">Muhammad Ismail Raza</a></p>
             </div>
 
@@ -143,5 +143,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
