--- a/fazal/afzal/afzal.html
+++ b/fazal/afzal/afzal.html
@@ -133,7 +133,7 @@
             </div>
             <div class="member">
                 <a href="">
-                    <img src="images/ismai.jpg" alt="Parent 1" /></a>
+                    <img src="images/ismai.png" alt="Parent 1" /></a>
                 <p><a href="">Muhammad Ismail Raza</a></p>
             </div>
 
@@ -146,3 +146,4 @@
 
 
 </html>
+
